set up admin layout

--- a/public/assets/scss/resets.scss
+++ b/public/assets/scss/resets.scss
@@ -4,3 +4,12 @@
 body {
   font-family: "Nunito", sans-serif;
 }
+
+button {
+  outline: none !important;
+}
+
+button:focus,
+.button:focus {
+  outline: none !important;
+}
