--- a/public/assets/scss/admin.scss
+++ b/public/assets/scss/admin.scss
@@ -120,6 +120,10 @@
         }
     }
 
+    .auth-h100 {
+        height: calc(100vh - 192px);
+    }
+
     .main {
         overflow-y: auto;
         scroll-behavior: smooth;
