--- a/public/assets/scss/resets.scss
+++ b/public/assets/scss/resets.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Livvic:wght@400;500;600;700&display=swap");
+@import "./variables";
 
 body {
   font-family: "Nunito", sans-serif;
@@ -12,4 +13,12 @@ button {
 button:focus,
 .button:focus {
   outline: none !important;
+}
+
+.bg-secondary {
+  background: $bg-secondary !important;
+}
+
+.border-secondary {
+  border-color: $bg-secondary !important;
 }
