--- a/public/assets/scss/theme.scss
+++ b/public/assets/scss/theme.scss
@@ -234,6 +234,16 @@
   border-color: $primary;
 }
 
+.owl-stage-outer {
+  height: 700px;
+}
+
+@media (max-width: 992px) {
+  .owl-stage-outer {
+    height: auto;
+  }
+}
+
 .page-header {
   background: linear-gradient(rgba(53, 53, 53, 0.7), rgba(53, 53, 53, 0.7)),
     url(../images/development/governace.jpg) center center no-repeat;
@@ -263,7 +273,7 @@
   width: 45px;
   height: 5px;
   bottom: 0;
-  background: $dark;
+  background: $primary;
 }
 
 .section-title h1::before {
@@ -384,6 +394,27 @@
 
 .portfolio-item:hover .portfolio-overlay .btn {
   opacity: 1;
+}
+
+ul.project-list {
+  padding: 0;
+  margin: 0;
+
+  li {
+    display: flex;
+    align-items: center;
+    list-style: none;
+  }
+
+  li + li {
+    margin-top: 5px;
+  }
+
+  li em {
+    background: #fff;
+    padding: 10px;
+    border-radius: 50%;
+  }
 }
 
 /*** Quote ***/
