updated about us page

--- a/public/assets/scss/resets.scss
+++ b/public/assets/scss/resets.scss
@@ -27,3 +27,7 @@ a {
   text-decoration: none;
   cursor: pointer;
 }
+
+div.website-layout {
+  background: url("../images/defaults/body-bg.png");
+}
