--- a/public/assets/scss/theme.scss
+++ b/public/assets/scss/theme.scss
@@ -663,3 +663,67 @@ ul.project-list {
     background-size: cover;
   }
 }
+
+/*** management ***/
+.manager-box {
+  box-shadow: 0px 5px 12.09px 0.91px rgb(133 127 151 / 11%);
+  background: #fff;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.manager-thumb img {
+  width: 100%;
+  display: block;
+}
+
+.manager-content {
+  padding: 30px 30px 40px;
+}
+
+.manager-info {
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+  position: relative;
+
+  span {
+    display: block;
+    font-size: 14px;
+    font-weight: 500;
+  }
+
+  h5 {
+    font-size: 18px;
+    margin-bottom: 5px;
+  }
+}
+
+.manager-info::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 2px;
+  width: 40px;
+  margin: 0 auto;
+  right: 0;
+  background: $primary;
+}
+
+@media (max-width: 767.98px) {
+  .manager-content {
+    padding: 30px 15px 30px;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .manager-content {
+    padding: 30px 30px 30px;
+  }
+}
+
+@media (max-width: 1199.98px) {
+  .manager-content {
+    padding: 30px 15px 30px;
+  }
+}
