--- a/public/assets/scss/resets.scss
+++ b/public/assets/scss/resets.scss
@@ -1,9 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Livvic:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700&display=swap");
 @import "./variables";
 
 body {
-  font-family: "Nunito", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 button {
